# conference_scheduler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: scheduling_config.jsonc
docs/: column_generation.md  configuration_and_algorithm_reference.md  developer_notes.md  matching_pipeline_specification.md  phase1_specification.md  phase2_specification.md  phase3_room_assignment.md  solver_guide.md
examples/: README.md  load_data.py
examples/orbel2017/: README.md  preferences.csv  sessions.csv  talks.csv
examples/orbel2026/: README.md  preferences.csv  sessions.csv  talks.csv
examples/synthetic/: availability.csv  preferences.csv  sessions.csv  talks.csv
scripts/: batch_evaluate.py  compare_all_pipelines.py  evaluate_schedule.py  generate_itinerary.py  run_schedule.py
src/: __init__.py  data_loader.py  instance.py  matching_pipeline.py  matching_pipeline_constrained.py  phase1.py  phase2.py  phase3.py  phase4.py  schedule.py  schedule_evaluator.py  swap_optimization.py  utils.py
src/columngeneration_phase1/: README.md  __init__.py  phase1_column_generation.py  phase1_column_generation_enhanced.py
src/pipelines/: __init__.py  heuristic.py  traditional.py
tests/: test_matching_pipeline.py  test_phase1.py  test_phase2.py  test_phase3.py  test_schedule_evaluator.py  test_solver_phase1.py
